--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,13 @@
   "require": {
     "php": ">=7.0",
     "arajcany/pre-press-tricks": "*",
-    "arajcany/tool-box": "*",
+    "arajcany/tool-box": "^0.0.6",
     "cakephp/cakephp": "3.6.*",
     "cakephp/migrations": "^1.8.0",
     "cakephp/plugin-installer": "^1.0",
     "josegonzalez/dotenv": "3.*",
     "mobiledetect/mobiledetectlib": "2.*",
     "phpspec/php-diff": "*"
-
   },
   "require-dev": {
     "cakephp/bake": "^1.1",
