--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "cakephp/plugin-installer": "^1.0",
     "josegonzalez/dotenv": "3.*",
     "mobiledetect/mobiledetectlib": "2.*",
-    "phpspec/php-diff": "*"
+    "phpspec/php-diff": "*",
+    "ext-json": "*"
   },
   "require-dev": {
     "cakephp/bake": "^1.1",
